fix clipping and add some definition to text fields

--- a/components/QueryTableWidget/styles.scss
+++ b/components/QueryTableWidget/styles.scss
@@ -18,3 +18,5 @@ button {
     color :#8e9494;
     font-weight: normal;
 }
+
+input { background-color: #ffffff99;}
